--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "next": "13.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-github-activity-calendar": "^2.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
