add github calendar

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-github-activity-calendar": "^2.0.5"
+    "react-github-calendar": "^3.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
